--- a/0.html
+++ b/0.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-</head>//关于网站
-<body >//我们的网站创建于2020年7月29日星期三，这是一个免费的科技交流平台，没有VIP，没有广告，没有小白和大神的区别，没有种族歧视（黑人的命也是命！）感谢捐助！感谢@github提供的代码托管和服务器管理平台，感谢@GTX690提供的灵感，感谢@ENDERMANCH提供的思路，感谢@Windows7小耿的三连。欢迎向我们提出意见和建议，邮箱地址xsxg123456@outlook.com
+</head>//头
+<body >//正文
 <div style="margin-right: auto;margin-left: auto;">//自动居中
 <table  width="960"  border="0" cellpadding="0" cellspacing="0" >//表
     <tr>
      <td colspan="3" style="background-color:#333333; width:960px; height:117px;">
+       <p><center><a>我们的网站创建于2020年7月29日星期三，这是一个免费的科技交流平台，没有VIP，没有广告，没有小白和大神的区别，没有种族歧视（黑人的命也是命！）感谢捐助！感谢@github提供的代码托管和服务器管理平台，感谢@GTX690提供的灵感，感谢@ENDERMANCH提供的思路，感谢@Windows7小耿的三连。欢迎向我们提出意见和建议，邮箱地址xsxg123456@outlook.com</a></center></P>
       </td>
     </tr>
     
@@ -13,3 +14,4 @@
 </table>
   </div>
 </body> 
+</html>
