--- a/0.html
+++ b/0.html
@@ -6,8 +6,9 @@
           <p><h1>关于网站</h1></p>    
           <p>我们的网站创建于2020年7月29日星期三，这是一个免费的科技交流平台，没有VIP，没有广告，没有小白和大神的区别，没有种族歧视（黑人的命也是命！）感谢捐助！感谢@github提供的代码托管和服务器管理平台，感谢@GTX690提供的灵感，感谢@ENDERMANCH提供的思路，感谢@Windows7小耿的三连。欢迎向我们提出意见和建议，邮箱地址xsxg123456@outlook.com</p>
           <p><h1>精彩视频</h1></p>  
-          <embed src="https://windows7xiaogeng-bilibili.github.io/w7xg.github.io/2011.mp4" width="500" height="300">
           <embed src="2011.mp4" width="500" height="300">
+       <p>原视频地址https://www.bilibili.com/video/BV1h5411W76o</p>
+          
       </div>
 </body>
 </html>
