--- a/1.html
+++ b/1.html
@@ -1,5 +1,6 @@
 <p><h1>音乐集锦</h1></p>
 <p><a>1.K-391 - Summertime</a></p>
-<embed src="K-391 - Summertime.mp3" width="500" height="150">
+<embed autoplay="false" src="K-391 - Summertime.mp3" width="200" height="45" />
 <p><a>2.ColBreakz - Mind Control</a></p>
-<embed src="ColBreakz - Mind Control.mp3" width="500" height="150">
+<embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="200" height="45" />
+
