--- a/1.html
+++ b/1.html
@@ -3,4 +3,4 @@
 <embed autoplay="false" src="K-391 - Summertime.mp3" width="200" height="45" />
 <p><a>2.ColBreakz - Mind Control</a></p>
 <embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="200" height="45" />
-
+<P><a>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com</a></p>
