--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 </head>
 <body>
       <div style="width:70%;margin:0 auto">
-          <p><h1><音乐集锦/h1></p>    
+          <p><h1><音乐集锦</h1></p>    
           <p><a>1.K-391 - Summertime</a></p>
 <embed autoplay="false" src="K-391 - Summertime.mp3" width="200" height="45" />
 <p><a>2.ColBreakz - Mind Control</a></p>
