--- a/1.html
+++ b/1.html
@@ -3,12 +3,12 @@
 </head>
 <body>
       <div style="width:70%;margin:0 auto">
-          <p><h1><音乐集锦</h1></p>    
-          <p><a>1.K-391 - Summertime</a></p>
-<embed autoplay="false" src="K-391 - Summertime.mp3" width="200" height="45" />
-<p><a>2.ColBreakz - Mind Control</a></p>
-<embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="200" height="45" />
-<P><a>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com</a></p>
+          <p><h1><center>音乐集锦</center></h1></p>    
+          <p><a <center>1.K-391 - Summertime </center></a></p>
+ <center><embed autoplay="false" src="K-391 - Summertime.mp3" width="200" height="45" /> </center>
+<p><a> <center>2.ColBreakz - Mind Control </center></a></p>
+ <center><embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="200" height="45" /> </center>
+<P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
           
       </div>
 </body>
