--- a/3.html
+++ b/3.html
@@ -5,7 +5,8 @@
       <div style="width:70%;margin:0 auto">
           <p><h1><center>微软 Win10 20H2 新功能盘点：全新开始菜单，简化升级，Edge 浏览器</center></h1></p>    
           <p>IT之家7月26日消息 Windows 10即服务每年更新两次，其中包含新功能和改进。Windows 10的下一个更新称为“20H2”，将在2020年下半年登陆。</p>
-          <p>微软表示，Windows 10 20H2或Build 19042将包括“一系列功能”，这意味着这将是另一个较小的更新，没有突破性的变化，就像Windows 10版本1909更新一样。</p>  
+          <p>微软表示，Windows 10 20H2或Build 19042将包括“一系列功能”，这意味着这将是另一个较小的更新，没有突破性的变化，就像Windows 10版本1909更新一样。</p> 
+          <img src="it1.jpg" width="100%"> 
           <p>IT之家获悉，除了微小的变化，Windows 10 20H2还可提供更大的改进，包括带有“主题感知”磁贴的全新“开始”菜单，以及更新的Alt-Tab应用程序切换，支持在Microsoft Edge中打开的选项卡。</p>
      <p>还有其他各种调整。例如，微软还正在对通知和设置进行调整。此外，计划在全新安装Windows 10时根据你的Microsoft帐户为任务栏填充与用户更相关的图标。</p>
        <p>对于OEM制造商，微软现在确认Windows 10版本20H2将不会为“Windows硬件兼容性计划”带来更新。换句话说，Windows 10 20H2版本的硬件实验室、驱动程序和系统要求都不会更改。</p>
