--- a/0.html
+++ b/0.html
@@ -8,7 +8,7 @@
           <p><h1><center>精彩视频</center></h1></p>  
           <center><embed src="2011.mp4" width="500" height="300"></center>
        <p><center>原视频地址https://www.bilibili.com/video/BV1h5411W76o</center></p>
-     <p><h4><a href="index.md">上一篇：主页</a></H4></p>
+     <p><h4><a href="index.html">上一篇：主页</a></H4></p>
  <p><h4><a href="1.html">下一篇：【置顶】音乐集锦</a></H4></p>
           
       </div>
