--- a/1.html
+++ b/1.html
@@ -9,7 +9,9 @@
 <p><a> <center>2.ColBreakz - Mind Control </center></a></p>
  <center><embed autoplay="false" src="ColBreakz - Mind Control.mp3" width="550" height="75" /> </center>
 <P><a> <center>ps:本网页只作为检测网络联通性能的检测工具，并非音乐欣赏工具。如需欣赏请下载网易云音乐music.163.com </center></a></p>
-          
+      
+     <p><h4><a href="0.html">上一篇：【置顶】关于网站</a></H4></p>
+ <p><h4><a href="2.html">下一篇：关于黑苹果安装和配置的一些总结</a></H4></p>
       </div>
 </body>
 </html>
