--- a/3.html
+++ b/3.html
@@ -3,7 +3,8 @@
 </head>
 <body>
       <div style="width:70%;margin:0 auto">
-          <p><h1><center>微软 Win10 20H2 新功能盘点：全新开始菜单，简化升级，Edge 浏览器</center></h1></p>    
+          <p><h1><center>微软 Win10 20H2 新功能盘点：全新开始菜单，简化升级，Edge 浏览器</center></h1></p>
+      <p><h3><center>作者：it之家</center></h3></p>
           <p>IT之家7月26日消息 Windows 10即服务每年更新两次，其中包含新功能和改进。Windows 10的下一个更新称为“20H2”，将在2020年下半年登陆。</p>
           <p>微软表示，Windows 10 20H2或Build 19042将包括“一系列功能”，这意味着这将是另一个较小的更新，没有突破性的变化，就像Windows 10版本1909更新一样。</p> 
           <img src="it1.jpg" width="100%"> 
@@ -14,6 +15,8 @@
   <p>这也意味着从当前Windows 10版本2004（20H1）升级到20H2的用户将具有简化的升级过程。用户还将注意到安装过程更快，就像他们正在安装累积更新一样。</p>
   <p>去年，Windows 10版本1909更新WHCP要求于10月宣布，功能更新于11月发布给消费者。今年的WHCP要求详细说明似乎很早，也表明Windows 10 20H2的发布时间可能比预期的要早。</p>
   <p>Windows 10 20H2更新将包括新的“开始”菜单，Alt-Tab多任务改进和基于Chromium的Microsoft Edge浏览器。它还将包括Windows 10版本2004的最新累积更新中提供的修复程序。</p>
+      <p><h4><a href="2.html">上一篇：关于黑苹果安装和配置的总结</a></H4></p>
+ <p><h4><a href="4.html">下一篇：不可用</a></H4></p>
       </div>
 </body>
 </html>
